--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <script src="https://unpkg.com/slick-carousel@1.6.0/slick/slick.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <app-root></app-root>
