--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,23 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <script src="/node_modules/raphael/raphael.js"> </script>
+  <script src="/node_modules/underscore/underscore-min.js"> </script>
+  <!-- <script src="/node_modules/moment/moment.js"> </script> -->
+  <!-- <script src="/node_modules/clndr/clndr.min.js"> </script> -->
+  <script src="/node_modules/jquery-sparkline/jquery.sparkline.min.js"> </script>
+  <script src="/node_modules/easy-pie-chart/dist/easypiechart.min.js"> </script>
+  <script src="/node_modules/jquery-flot/jquery.flot.js"> </script>
+  <script src="/node_modules/jquery-flot/jquery.flot.pie.js"> </script>
+  <script src="/node_modules/jquery-flot/jquery.flot.resize.js"> </script>
+
+  <script src="/scripts/moment-2.2.1.js"> </script>
+  <script src="/scripts/jquery.flot.animator.min.js"> </script>
+  <script src="/scripts/jquery.flot.growraf.js"> </script>
+  <script src="/scripts/jquery.flot.time.js"> </script>
+  <script src="/scripts/jquery.flot.tooltip.min.js"> </script>
+  <script src="/scripts/clndr.js"> </script>
 </head>
 <body>
   <app-root></app-root>
